--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,18 @@
-.App {
+.app {
   text-align: center;
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.app * {
+  padding: 0;
+  margin: 0;
 }
 
 .App-logo {
@@ -7,21 +20,22 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.puzzle {
+  flex: 1;
+  background-color: #9dca43;
+  display: flex;
+  height: 100vh;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.info {
+  flex: 1;
+  background-color: #305aaf;
   display: flex;
+  height: 100vh;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+
+.logs {
 }
 
 .App-link {
