--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -20,11 +20,39 @@
   pointer-events: none;
 }
 
+.grid {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  width: 100%;
+  aspect-ratio: 1;
+  background-color: red;
+}
+
 .puzzle {
   flex: 1;
   background-color: #9dca43;
   display: flex;
   height: 100vh;
+  flex-direction: column;
+  border-radius: 4px;
+  border: 2px solid #61dafb;
+  padding: 0;
+  gap: 8px;
+}
+
+.running_info {
+  font-family: monospace;
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  justify-content: center;
+}
+
+.puzzle_title {
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
 }
 
 .info {
@@ -36,6 +64,10 @@
 }
 
 .logs {
+  flex: 1;
+  overflow-y: auto;
+  font-family: monospace;
+  font-size: 12px;
 }
 
 .App-link {
