--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,7 +3,7 @@
   background-color: #282c34;
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: stretch;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
@@ -18,6 +18,7 @@
 .grid {
   display: flex;
   flex-direction: column;
+  flex: 1;
   gap: 8px;
   aspect-ratio: 1;
   background-color: #6b2b2b;
@@ -29,6 +30,23 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+}
+
+.cell {
+  border-radius: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  font-weight: bold;
+  cursor: default;
+  user-select: none;
 }
 
 .running_info {
@@ -46,17 +64,30 @@
 }
 
 .info {
+  padding: 16px 8px 8px 8px;
   flex: 1;
-  background-color: #1d3a74;
   display: flex;
   flex-direction: column;
+  gap: 8px;
+  font-size: 14px;
+}
+
+.info-title {
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
 }
 
 .logs {
   background-color: #282c34;
-  padding: 8px;
   flex: 1;
   overflow-y: auto;
   font-family: monospace;
   font-size: 12px;
+  align-items: stretch;
+  white-space: pre-wrap;
+}
+
+.log-item {
+  text-align: left;
 }
